# django-forge-auth

./: CLAUDE.md  README.md  main.py  pyproject.toml
src/forge_auth/: admin.py  apps.py  authentification.py  backends.py  conf.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
src/forge_auth/migrations/: 0001_initial.py  0002_user_otp_secret_user_status.py  0003_otptoken.py
tests/: _helpers.py  settings.py  test_authentication.py  test_backends.py  test_conf.py  test_f2fa_views.py  test_models.py  test_signals.py  tests.py  urls.py
