[project]
name = "django-forge-auth"
version = "0.1.32"
description = "Application Django réutilisable d'authentification (JWT + OTP)"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Cédric Herve Youan", email = "hervecedricyouan@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["django", "auth", "forge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "django>=5.0,<6.1",
    "pyotp>=2.9",
    "drf-spectacular>=0.27",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[project.urls]
Homepage = "https://github.com/alzeph/django-forge-auth.git"
Repository = "https://github.com/alzeph/django-forge-auth.git"
Issues = "https://github.com/alzeph/django-forge-auth/issues"


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "django-forge-test>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_auth"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py"]
